--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,12 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Http\\": "Http"
+            "Http\\": "Http",
+            "App\\": "App",
+            "App\\Controllers\\": "App/Controllers",
+            "App\\Middlewares\\": "App/Middlewares",
+            "Core\\": "Core"
+
         }
     },
     "description": "test-crm-app"
