--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "ext-xmlwriter" : "*"
+        "ext-xmlwriter" : "*",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
@@ -16,6 +17,7 @@
             "App\\Controllers\\": "App/Controllers",
             "App\\Middlewares\\": "App/Middlewares",
             "Core\\": "Core",
+            "Core\\Exceptions\\": "Core/Exceptions",
             "Services\\" : "Services",
             "Services\\Interfaces\\" : "Services/Interfaces",
             "Services\\Traits\\" : "Services/Traits"
