--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     ],
     "require": {
         "ext-xmlwriter" : "*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
