--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         "psr-0": {
             "Entities": "App/Models/src"
         },
-        "files": ["App/helpers/helpers.php"]
+        "files": [
+            "App/helpers/helpers.php"
+        ]
     },
     "description": "test-crm-app",
     "require-dev": {
